# Ros2_ws

./: ASSIGNMENT_GUIDE.md  Dockerfile  README.md  docker-compose.yml  run.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot/lib/my_robot/: arm_controller.py  fake_odom.py  pick_controller.py  sensor_simulator.py  simulator.py  walker.py
install/my_robot/share/ament_index/resource_index/package_run_dependencies/: my_robot
install/my_robot/share/my_robot/: package.sh  package.xml
install/my_robot/share/my_robot/launch/: rsp.launch.py
install/my_robot/share/my_robot/rviz/: urdf_config.rviz
install/my_robot/share/my_robot/urdf/: my_robot.urdf
install/turtlebot3_simulation/lib/turtlebot3_simulation/: teleop_node.py  velocity_controller.py
install/turtlebot3_simulation/share/turtlebot3_simulation/: package.sh  package.xml
install/turtlebot3_simulation/share/turtlebot3_simulation/config/: turtlebot3_params.yaml
install/turtlebot3_simulation/share/turtlebot3_simulation/rviz/: turtlebot3_view.rviz
log/: latest_build
ros2_ws/src/my_robot/launch/: rsp.launch.py
src/my_robot/: CMakeLists.txt  ECE2318_Robotics_Assignment_Report.md  package.xml
src/my_robot/launch/: rsp.launch.py  rviz_only.launch.py
src/my_robot/rviz/: urdf_config.rviz
src/my_robot/src/: demo_services_actions.py  fake_odom.py  pick_controller.py  robot_actions.py  robot_master_controller.py  robot_services.py  sensor_simulator.py  walker.py
src/my_robot/urdf/: my_robot.urdf
src/turtlebot3_simulation/: CMakeLists.txt  README.md
src/turtlebot3_simulation/launch/: gazebo_only.launch.py  rviz_only.launch.py  turtlebot3_simulation.launch.py
src/turtlebot3_simulation/src/: action_server.py  service_server.py
src/turtlebot3_simulation/urdf/: turtlebot3_burger.urdf
src/turtlebot3_simulation/worlds/: empty_world.world
